# tech-challenge-recommender

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  dvc.yaml  main.py  pyproject.toml
.dvc/: config
data/processed/: .gitignore
src/recommender/: main.py
src/recommender/config/: settings.py
src/recommender/data_loader/: loader.py
src/recommender/evaluation/: evaluate.py
src/recommender/models/: base_model.py  mlp_model.py  model_factory.py
src/recommender/preprocessing/: feature_eng.py  preprocess.py  standard_scaler.py  strategy.py
src/recommender/training/: train.py  trainer.py
src/recommender/utils/: validate_env.py
