[project]
name = "tech-challenge-recommender"
version = "0.1.0"
description = "Sistema de recomendação de produtos com PyTorch"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "torch>=2.7.0",
    "mlflow>=3.0.0",
    "pydantic-settings>=2.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "pre-commit>=4.6.0",
]